--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
 	</head>
 	<body>
 		<h1>welcome to the homepage!</h1>
+
+		<form id="add-post-form">
+			<label for="title">Title: </label><br />
+			<input type="text" id="title" name="title" /><br />
+			<button type="submit">Add post</button>
+		</form>
+
 		<button id="get-posts-btn">Get Posts</button>
 		<div id="output"></div>
 		<script src="./js/main.js"></script>
